# project-gupt-service-win

./: ARCHITECTURE.md  CMakeLists.txt  CODEC_INTEGRATION.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  README.md  STATUS.md
client/: decoder.cpp  decoder.h  input_sender.cpp  input_sender.h  main.cpp  network_client.cpp  network_client.h  renderer.cpp  renderer.h
common/: logger.cpp  logger.h  packet.h  protocol.h  utils.cpp  utils.h
host/: capture.cpp  capture.h  encoder.cpp  encoder.h  input_handler.cpp  input_handler.h  main.cpp  network_server.cpp  network_server.h
signaling/: Makefile  README.md  api.go  server.go  session.go
signaling/web/: app.js  index.html  style.css
tests/: CMakeLists.txt  test_capture.cpp  test_encoder.cpp  test_network_client.cpp
